--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,44 @@
 			<version>3.12.1.GA</version>
 		</dependency>
 
+    <!-- Logging using SLF4j with logback  -->
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.5.8</version>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-core</artifactId>
+		<version>0.9.15</version>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>0.9.15</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.3</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-httpclient</groupId>
+		<artifactId>commons-httpclient</artifactId>
+		<version>3.1</version>
+	</dependency>
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>1.6</version>
+	</dependency>
+	<dependency>
+		<groupId>com.google.code.typica</groupId>
+		<artifactId>typica</artifactId>
+		<version>1.6</version>
+	</dependency>
+
+            
 		<!-- Maven war plugin -->
 	</dependencies>
 
@@ -223,13 +261,13 @@
 				<artifactId>cargo-maven2-plugin</artifactId>
 				<configuration>
 					<container>
-						<containerId>tomcat7x</containerId>
+						<containerId>tomcat6x</containerId>
 						<type>remote</type>
 					</container>
 					<configuration>
 						<type>runtime</type>
 						<properties>
-							<cargo.server.settings>tomcat7_local</cargo.server.settings>
+							<cargo.server.settings>tomcat6_local</cargo.server.settings>
 						</properties>
 					</configuration>
 				</configuration>
